[project]
name = "market_yield_dashboard"
version = "0.1.0"
description = "Refactored real‑time yield curve dashboard"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version="^0.30"}
aioredis = "^2.0"
pydantic = "^2.7"
streamlit = "^1.35"
pandas = "^2.2"
altair = "^5.3"
websockets = "^12.0"

[tool.black]
line-length = 88
